--- a/playbook.yml
+++ b/playbook.yml
@@ -4,12 +4,8 @@
   vars:
     web_server: nginx
     sys_packages: [ 'git', 'curl', 'vim' ]
-  tasks:
-    - name: Install {{ web_server }}
-      become: Yes
-      apt: name={{ web_server }}
-    - name: Install Packages
-      become: Yes
-      apt: name={{ item }}
-      with_items: "{{ sys_packages }}"
+    doc_port: 3000
+  roles:
+    - init
+    - nginx
 
