--- a/roles/kube-control-plane/tasks/main.yml
+++ b/roles/kube-control-plane/tasks/main.yml
@@ -27,3 +27,13 @@
     - "-key"
     - ""
 
+- name: Copy kubeconfigs
+  copy:
+    src: "{{ item }}.kubeconfig"
+    dest: /root/{{ item }}.kubeconfig
+  become: Yes
+  with_items:
+    - admin
+    - kube-controller-manager
+    - kube-scheduler
+
