--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -20,3 +20,15 @@
     - "-key"
     - ""
 
+- name: Copy kubeconfig
+  copy:
+    src: "{{ inventory_hostname }}.kubeconfig"
+    dest: /root/{{ inventory_hostname}}.kubeconfig
+  become: Yes
+
+- name: Copy kubeproxy
+  copy:
+    src: kube-proxy.kubeconfig
+    dest: /root/kube-proxy.kubeconfig
+  become: Yes
+
